<resources>
    <string name="app_name">Blood Bank</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_navigation_drawer">Blood Bank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="danyal_ucp_edu_pk">danyal@ucp.edu.pk</string>
    <string name="donors">Donors</string>
    <string name="blood_group">Blood Group</string>
    <string name="saved_donors">Saved Donors</string>
    <string name="blood_banks">Blood Banks</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="user_image">user_image</string>
    <string name="add_mobile">Add Mobile</string>
    <string name="add_name">Add Name</string>
    <string name="add_enter_your_name">Add Enter Your Name</string>
    <string name="add_enter_your_number">Add Enter Your Number</string>
    <string name="add_city">Add City</string>
    <string name="add_save_data">Add save data</string>
    <string name="save_data">Save Data</string>
    <string name="profile">Profile</string>
    <string name="blood_type">Blood Type</string>
    <string name="gender">Gender</string>
    <string name="profileEmail">Email</string>
    <string name="profileEmailText">dummy@gmail.com</string>
    <string name="profilePhone">Phone</string>
    <string name="profilePhoneText">03215566456</string>
    <string name="profileGender">Gender</string>
    <string name="profileGenderText">Male</string>
    <string name="profileDate">Date Of Birth</string>
    <string name="profileDateText">21-5-1996</string>
    <string name="profileSetting">profileSetting</string>
    <string name="tv_address">Dummy</string>
    <string name="tv_name">Dummy</string>
    <string name="profile_image_in_profile">profile image in profile</string>
    <string name="tv_blood">+O</string>
    <string name="donor_image">todo</string>
    <string name="donor_name">Name</string>
    <string name="donor_blood_group">Blood Group</string>
    <string name="donor_gender">Gender</string>
    <string name="donor_location">Location</string>
    <string name="logout">Logout</string>
    <string name="call">Call</string>
    <string name="donor_call">Call</string>

    <string-array name="blood_type">
        <item>A+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>O+</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB-</item>
        <item>O-</item>
    </string-array>
    <string-array name="panch">
        <item>Lahore</item>
        <item>Karachi</item>
        <item>Islamabad</item>
        <item>Faisalabad</item>
        <item>Multan</item>
    </string-array>

    <string-array name="gender">
    <item>Male</item>
    <item>Female</item>
    <item>Others</item>
    </string-array>
</resources>
