<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Doner1"
            android:icon="@drawable/ic_person_"
            android:title="@string/donors" />
        <item
            android:id="@+id/Bloodsgroup"
            android:icon="@drawable/ic_folder"
            android:title="@string/blood_group" />
        <item
            android:id="@+id/Save"
            android:icon="@drawable/ic_save"
            android:title="@string/saved_donors" />
        <item
            android:id="@+id/Info"
            android:icon="@drawable/info"
            android:title="@string/blood_banks" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
