<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/add_logo"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="21dp"
        android:layout_weight="5.21"
        android:contentDescription="@string/user_image"
        app:layout_constraintBottom_toTopOf="@+id/text_Add_User_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/user" />

    <TextView
        android:id="@+id/text_Add_User_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:text="@string/add_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_User_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/add_enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_logo"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/add_Phone_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/add_enter_your_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_User_Name"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/text_Add_Mobile_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_mobile"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_Phone_Number"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_Blood_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_blood_type"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Add_Spinner_Blood_type" />

    <Spinner
        android:id="@+id/Add_Spinner_Blood_type"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:entries="@array/blood_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_Blood_type"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_Add_City"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="158dp"
        android:text="@string/add_city"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/Add_Spinner_City"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="103dp"
        android:entries="@array/panch"
        app:layout_constraintBottom_toBottomOf="@+id/add_Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Add_Spinner_Blood_type"
        app:layout_constraintTop_toBottomOf="@+id/add_Phone_Number" />


    <Button
        android:id="@+id/add_Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="42dp"
        android:background="#f31c45"
        android:onClick="Save"
        android:text="@string/save_data"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>