<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:tag="cards main container">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Person"
                android:layout_width="7dp"
                android:layout_height="209dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/donor_image"
                android:tag="image_tag"
                tools:srcCompat="@tools:sample/avatars[0]" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="201dp"
                android:layout_marginTop="12dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Person_Name"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="-20dp"

                    android:layout_marginTop="30dp"
                    android:text="@string/donor_name"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/Person_Location"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="-25dp"

                    android:layout_marginTop="10dp"

                    android:text="@string/donor_location"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>